// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text field should render disabled input 1`] = `
<div
  className="form-group"
>
  <textarea
    autoFocus={true}
    className="form-control"
    disabled={true}
    id="myForm"
    label="My input title"
    onChange={[Function]}
    placeholder="Type something here"
    readOnly={undefined}
    type="text"
    value="toto"
  />
  <label
    className="control-label"
    htmlFor="myForm"
  >
    My input title
  </label>
  <Message
    description="my text input hint"
    errorMessage="My error message"
    isValid={true}
  />
</div>
`;

exports[`Text field should render input 1`] = `
<div
  className="form-group"
>
  <textarea
    autoFocus={true}
    className="form-control"
    disabled={undefined}
    id="myForm"
    label="My input title"
    onChange={[Function]}
    placeholder="Type something here"
    readOnly={undefined}
    type="text"
    value="toto"
  />
  <label
    className="control-label"
    htmlFor="myForm"
  >
    My input title
  </label>
  <Message
    description="my text input hint"
    errorMessage="My error message"
    isValid={true}
  />
</div>
`;

exports[`Text field should render readonly input 1`] = `
<div
  className="form-group"
>
  <textarea
    autoFocus={true}
    className="form-control"
    disabled={undefined}
    id="myForm"
    label="My input title"
    onChange={[Function]}
    placeholder="Type something here"
    readOnly={true}
    type="text"
    value="toto"
  />
  <label
    className="control-label"
    htmlFor="myForm"
  >
    My input title
  </label>
  <Message
    description="my text input hint"
    errorMessage="My error message"
    isValid={true}
  />
</div>
`;
